Replaced Vector usage by ArrayList + bugfix buttons enabling

--- a/src/fr/seki/duphunter/gui/OptionsPanel.form
+++ b/src/fr/seki/duphunter/gui/OptionsPanel.form
@@ -101,6 +101,7 @@
     <Component class="javax.swing.JButton" name="saveBtn">
       <Properties>
         <Property name="text" type="java.lang.String" value="Save"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="saveBtnActionPerformed"/>
@@ -109,6 +110,7 @@
     <Component class="javax.swing.JButton" name="addDirBtn">
       <Properties>
         <Property name="text" type="java.lang.String" value="Add directory"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addDirBtnActionPerformed"/>
@@ -126,6 +128,7 @@
     <Component class="javax.swing.JButton" name="refreshAllBtn">
       <Properties>
         <Property name="text" type="java.lang.String" value="Refresh all"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="refreshAllBtnActionPerformed"/>
@@ -134,6 +137,7 @@
     <Component class="javax.swing.JButton" name="addRepoBtn">
       <Properties>
         <Property name="text" type="java.lang.String" value="Add repositiory"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addRepoBtnActionPerformed"/>
